Bug 517117: don't trace JSOP_ARGCNT if arguments.length has been overridden, r=dvander